--- a/views/index.hbs
+++ b/views/index.hbs
@@ -58,47 +58,13 @@
             </div>
             <div id="content">
                 <div id="content_aligin">
-
+                    {{#each events}}
+                    {{#each this}}
                     <div class="card">
-                        <div class="date">
-                            <p class="date_text">9-aug / 12aug</p>
-                        </div>
-                        <div class="card_image">
-                            <figure><img src="img/test.png"></figure>
-
-                        </div>
-
-                        <div id="info_post" class="info">
-                            <!--name-->
-                            <div class="info_icon"><i class="fa fa-user-astronaut"></i></div>
-                            <div class="text_info">
-                                <p>Retro dance festival</p>
-                            </div>
-                        </div>
-                        <div class="info">
-
-                            <!--location-->
-                            <div class="info_icon"><i class="fa fa-map-marker-alt"></i></div>
-                            <div class="text_info">
-                                <p>test</p>
-                            </div>
-                        </div>
-                        <div class="info">
-                            <!--price-->
-                            <div class="info_icon"><i class="fa fa-euro-sign"></i></div>
-                            <div class="text_info">
-                                <p>&euro;</p>
-                            </div>
-                        </div>
-
+                        <h1>hou je smoel</h1>
                     </div>
-
-
-
-
-
-
-
+                    {{/each}}
+                    {{/each}}
                 </div>
         </main>
 
