--- a/views/userlogin.hbs
+++ b/views/userlogin.hbs
@@ -37,7 +37,7 @@
                             <img src="../img/hallo.jpeg" alt="IMG">
                         </div>
 
-                        <form class="login100-form validate-form" method="POST" action="/auth/login">
+                        <form class="login100-form validate-form">
                             <span class="login100-form-title">
                                 Member Login
                             </span>
@@ -96,7 +96,7 @@
                     scale: 1.1
                 })
             </script>
-            <script src="../js/main.js"></script>
+            <script src="../js/form.js" <script src="../js/main.js"></script>
         </div>
     </div>
 </body>
