--- a/views/userlogin.hbs
+++ b/views/userlogin.hbs
@@ -37,7 +37,7 @@
                             <img src="../img/hallo.jpeg" alt="IMG">
                         </div>
 
-                        <form class="login100-form validate-form">
+                        <form class="login100-form validate-form" method="POST" action="/auth/login">
                             <span class="login100-form-title">
                                 Member Login
                             </span>
