--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,25 +9,23 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 #align_headerbar {
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  margin-bottom: 100px;
+  position: fixed;
+  top: 0;
+  background: #fff;
+  color: #555;
 }
-
 #logo {
   display: inline-block;
-  color: #fefefe;
+  color: #555;
+  padding: 15px;
 }
-
-#logo img {
-  width: 30%;
-  height: 100%;
-  margin-left: 21%;
+#logo a {
+  text-decoration: none;
 }
-
 #login_reg_button {
   margin-top: 1%;
   display: grid;
@@ -35,46 +33,25 @@
   margin-right: 3%;
   grid-template-columns: 1fr 1fr;
 }
-
 #login_reg_button a {
   text-align: right;
   text-decoration: none;
-  color: white;
+  color: #555;
   font-size: 1em;
   float: left;
-}
-#login_reg_button a:hover {
-  color: #ccc;
+  padding: 15px;
 }
 
-#background_boven {
-  background-image: url("../img/background.mp4");
-  height: -webkit-fill-available;
+header {
+  width: 100%;
 }
-
 #myVideo {
   z-index: -1;
   right: 0;
   position: absolute;
   bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
-}
-
-form {
-  margin-left: -2%;
-  margin-top: 25%;
-}
-
-.button_submit {
-  background-color: ;
-}
-
-input[type="search"] {
-  height: 50px;
-  width: 60%;
-  border: 1px solid #ccc;
-  text-align: center;
+  width: 100%;
+  height: 100px;
 }
 
 .search {
@@ -115,13 +92,13 @@ button[type="submit"] {
   outline: inherit;
 }
 
-#title_aligin {
-  width: 50%;
-  margin-left: 25%;
-  height: 501px;
+#title_align {
+  margin-top: 50%;
   text-align: center;
-  font-weight: bold;
   color: #fff;
+}
+#title_align p {
+  font-size: 2em;
 }
 #bar h6 {
   color: #555;
@@ -181,18 +158,6 @@ button[type="submit"] {
   font-size: 1.5em;
 }
 
-@media only screen and (max-width: 320px) {
-  #title_aligin {
-    width: 95%;
-    height: 501px;
-  }
-
-  input[type="search"] {
-    height: 50px;
-    width: 97%;
-    border: 1px solid #ccc;
-  }
-}
 #container {
   max-width: 960px;
   margin: 10px auto;
@@ -218,7 +183,7 @@ a:active {
 }
 /*detail page*/
 #detail-cont {
-  padding-top: 50px;
+  padding-top: 100px;
   width: 100%;
   background: rgb(39, 95, 199);
   min-height: 100vh;
@@ -247,8 +212,8 @@ a:active {
   text-align: center;
   font-weight: bold;
 }
-#location-container,
-#date-container {
+.location-container,
+.date-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
 }
