--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    {{>nav}}
     <section id="detail-cont">
         <div id="event">
             <h1>{{event.eventName}}</h1>
@@ -22,7 +23,6 @@
                 </div>
             </div>
             <p>{{event.description}}</p>
-            <iframe src="https://www.google.com/maps/place/{{encoded}}"></iframe>
 
 
         </div>
