--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -5,11 +5,11 @@
         </a>
     </div>
     <!--navbar-->
+    {{#if user}}
+    <p>{{this.username}}</p>
+    {{/if}}
 
-    <div id="login_reg_button">
-        <a href="/auth/login">login</a>
-        <a href="/auth/register">Register</a>
-    </div>
+
     <!--navbar-->
 
 
