--- a/public/css/style.css
+++ b/public/css/style.css
@@ -198,12 +198,20 @@ a:active {
   height: auto;
 }
 .orderbutton {
+  text-align: center;
+  margin-left: 25%;
+  width: 50%;
   padding: 10px 15px;
   background: rgb(88, 88, 206);
   color: #fff;
   border-radius: 4px;
   border: none;
   margin-top: 50px;
+  display: block;
+  transition: background 0.3s;
+}
+.orderbutton:hover {
+  background: rgb(58, 58, 153);
 }
 .description {
   font-size: 0.8em;
