--- a/views/adminlogin.hbs
+++ b/views/adminlogin.hbs
@@ -1,5 +1,36 @@
-<form method="post" action="/ticketvendoradmin/auth">
-  <input placeholder="username" type="text" id="username" name="username" />
-  <input placeholder="password" type="password" id="password" name="password" />
-  <button type="submit">Log in</button>
-</form>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<link rel="stylesheet" type="text/css" href="css/style.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="../css/adminlogin.css">
+  <title>Admin login page</title>
+</head>
+
+<body id="body1">
+
+  <form method="post" action="/ticketvendoradmin/auth">
+  <div class="login-box">
+    <h1>Admin Panel</h1>
+    <div class="textbox">
+      <i class="fas fa-user"></i>
+      <input id = "username" name = "username" type="text" placeholder="username">
+    </div>
+
+    <div class="textbox">
+      <i class="fas fa-lock"></i>
+      <input id = "password" type="password" name="password" placeholder="password">
+    </div>
+
+    <input type="submit" class="btn" value="Sign In"> 
+    <a href ="wachtwoord.html" target="_blank"><h2>Wachtwoord vergeten?</a></h2>
+  
+  
+  </form>
+  </div>
+
+</body>
+
+</html>
