--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -71,6 +72,7 @@
                     <form id="newUserForm">
                         <input type="text" name="username" id="usernameuser">
                         <input type="text" name="email" id="emailuser">
+                        <input type="password" name="passwprd" id="passworduser">
                         <button type="submit">Add new user</button>
                     </form>
                 </div>
@@ -86,9 +88,9 @@
                 </div>
                 <div>
                     <form id="newAdminForm">
-                        <input type="text" name="username" id="usernameuser">
-                        <input type="text" name="email" id="emailuser">
-                        <input type="password" name="password" id="passworduser">
+                        <input type="text" name="username" id="usernameadmin">
+                        <input type="text" name="email" id="emailadmin">
+                        <input type="password" name="password" id="passwordadmin">
                         <button type="submit">Add new user</button>
                     </form>
                 </div>
