--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -5,9 +5,11 @@
         </a>
     </div>
     <!--navbar-->
-    {{#if user}}
-    <p>{{this.username}}</p>
-    {{/if}}
+    <div class="navlinks">
+
+        <a href="/auth/login">login</a>
+        <a href="/auth/register">register</a>
+    </div>
 
 
     <!--navbar-->
